@startuml

title __TASK2_MULTITHREADING's Class Diagram__\n

  package by.training.task2.entity {
    class Cashier {
    }
  }
  

  package by.training.task2.generator {
    class CashierGenerator {
    }
  }
  

  package by.training.task2.entity {
    class Configuration {
    }
  }
  

  package by.training.task2.entity {
    class Customer {
    }
  }
  

  package by.training.task2.generator {
    class CustomerGenerator {
    }
  }
  

  package by.training.task2.parser {
    class DataParser {
    }
  }
  

  package by.training.task2.reader {
    class DataReader {
    }
  }
  

  package by.training.task2.validator {
    class DataValidator {
    }
  }
  

  package by.training.task2.exception {
    class IncorrectDataException {
    }
  }
  

  package by.training.task2.runner {
    class Main {
    }
  }
  

  package by.training.task2.entity {
    class Restaurant {
    }
  }
  

  Cashier -up-|> Callable
  Restaurant o-- Configuration : configuration


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
